--- a/MindSpore_NLP/task4/generate_parameter.ipynb
+++ b/MindSpore_NLP/task4/generate_parameter.ipynb
@@ -47,20 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1a96f09f-0799-46af-9627-ef03b9844039",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "probs:tensor([[0.2559, 0.5154, 0.0571, 0.1716]])\n",
-      "probs_low:tensor([[0.1800, 0.7301, 0.0090, 0.0809]])\n",
-      "probs_high:tensor([[0.2695, 0.3825, 0.1273, 0.2207]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "logits = torch.tensor([[0.5, 1.2, -1.0, 0.1]])\n",
@@ -143,18 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "c575d66f-059d-49ea-81e8-5ba948521254",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new_probs: tensor([[0.2559, 0.5154,   -inf,   -inf]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "filter_value = -float(\"Inf\")\n",
@@ -175,19 +157,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d0b4101f-a916-4068-b1cf-f2c328429b07",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "原始概率分布： [0.3 0.1 0.3 0.1 0.2]\n",
-      "调整后的概率分布： [0.33333333 0.11111111 0.26666667 0.11111111 0.17777778]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "def apply_repetition_penalty(probs, repetition_penalty, prev_tokens):\n",
@@ -219,18 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d1b6b1a8-ccf8-49d6-90b2-6a8b79ce0ad5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "next_token: tensor([[1]])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "probs = torch.tensor([[0.2559, 0.5154, 0.0571, 0.1716]])\n",
@@ -248,20 +213,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "cc0c0b32-d922-4ee5-98a8-dedcf0ab49fc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sentence 1: <start> I like\n",
-      "Sentence 2: <start> I apple\n",
-      "Sentence 3: <start> I peach\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class BeamSearchNode:\n",
     "    def __init__(self, sequence, score):\n",
@@ -606,9 +561,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "python-3.7.10",
    "language": "python",
-   "name": "python3"
+   "name": "python-3.7.10"
   },
   "language_info": {
    "codemirror_mode": {
@@ -620,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
